# my-choice

./: Makefile  package-lock.json  readme.md
auth-service/: .coveragerc  .dockerignore  .env.ci  .env.example  .env.test  .gitignore  .pylintrc  Dockerfile  README.md  compose.yaml  main.py  pytest.ini  schema.json
election-service/: .coveragerc  .env.ci  .env.example  .env.test  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
election-service/.github/workflows/: ci.yml
election-service/alembic/: env.py
election-service/alembic/versions/: 353500238530_add_program_position_slogan_priorities_.py  52bb61a1a135_initial_migration_v2_uuid36.py  62b827889979_description.py  699595c8e1c1_add_approval_status_to_candidates.py  804ea2ee06ec_add_email_to_election_users.py
election-service/app/core/: config.py  response_type.py  startup.py
election-service/app/db/: base.py
election-service/app/infrastructure/: __init__.py  rabbitmq_publisher.py
election-service/app/models/: __init__.py  candidate.py  election.py  election_user.py  vote.py
election-service/app/v1/: app.py  exception_handlers.py
election-service/app/v1/repositories/: candidate_repository.py  election_repository.py  election_user_repository.py  vote_repository.py
election-service/app/v1/routers/: admin.py  api.py  candidates.py  elections.py  internal.py  stats.py  webhook.py
election-service/app/v1/schemas/: candidate.py  election.py  stats.py  webhook.py
election-service/app/v1/services/: admin_service.py  election_service.py  stats_service.py
election-service/tests/: conftest.py
election-service/tests/v1/: test_elections.py  test_stats.py  test_webhook.py
frontend/: .genignore  README.md  package-lock.json  package.json
vote-service/: .env.example  .gitignore  alembic.ini  compose.yaml  main.py  pyproject.toml
vote-service/alembic/: env.py
vote-service/alembic/versions/: 001_create_vote_records.py
vote-service/app/: __init__.py
vote-service/app/core/: __init__.py  config.py  startup.py
vote-service/app/db/: __init__.py  base.py  session.py
vote-service/app/infrastructure/: __init__.py  election_client.py  rabbitmq.py  redis_cache.py
vote-service/app/models/: __init__.py  vote_record.py
vote-service/app/v1/: __init__.py  app.py
vote-service/app/v1/routers/: __init__.py  api.py  results.py
vote-service/app/v1/schemas/: __init__.py  results.py
vote-service/app/v1/services/: __init__.py  results_service.py  sse_manager.py  vote_consumer.py
(+207 files in other folders)
