[project]
name = "vote-service"
version = "0.1.0"
description = "Microservice dédié à la gestion des votes en temps réel — consommation RabbitMQ, cache Redis, API SSE."
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    # --- Web framework ---
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    # --- Base de données (MySQL async) ---
    "sqlalchemy>=2.0.40",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "databases>=0.9.0",
    "alembic>=1.15.2",
    # --- Message broker (RabbitMQ) ---
    "aio-pika>=9.5.0",
    # --- Cache (Redis) ---
    "redis[hiredis]>=5.0.0",
    # --- HTTP client (appels vers election-service) ---
    "httpx>=0.28.1",
    # --- Configuration & validation ---
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "coverage>=7.8.0",
    "faker>=37.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.0",
    "pytest-env>=1.1.5",
    "ruff>=0.11.7",
]

[tool.setuptools]
packages = ["app", "alembic", "tests"]

[tool.ruff]
line-length = 100
exclude = [".venv", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
ignore_missing_imports = true
